Update to 1.21.8